[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/PhaseDiagrams/Ne.gd" type="Script" id=1]

[node name="Neon" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [ 1112.0 ]
}

[node name="Solid" type="Polygon2D" parent="."]
color = Color( 0.682353, 0.866667, 1, 1 )
polygon = PackedVector2Array( 0, 0, 800, 0, 800, 400, 0, 400 )

[node name="Liquid" type="Polygon2D" parent="."]
color = Color( 0.776471, 1, 0.8, 1 )
polygon = PackedVector2Array( 20, 212, 20, 136, 36, 128, 36, 156 )

[node name="Gas" type="Polygon2D" parent="."]
color = Color( 1, 0.839216, 0.564706, 1 )
polygon = PackedVector2Array( 16, 400, 20, 212, 36, 156, 800, 156, 800, 400 )

[node name="Superfluid" type="Polygon2D" parent="."]
polygon = PackedVector2Array( 36, 156, 36, 128, 800, 92, 800, 156 )

[node name="TriplePoint" type="Polygon2D" parent="."]
position = Vector2( 27.2326, 307.415 )
color = Color( 1, 0, 0, 1 )
polygon = PackedVector2Array( 0, 0, 3, 0, 3, 3, 0, 3 )

[node name="MeltPoint" type="Polygon2D" parent="."]
position = Vector2( 27.237, 290 )
color = Color( 1, 0, 0, 1 )
polygon = PackedVector2Array( 0, 0, 3, 0, 3, 3, 0, 3 )

[node name="BoilPoint" type="Polygon2D" parent="."]
position = Vector2( 30.0539, 290 )
color = Color( 1, 0, 0, 1 )
polygon = PackedVector2Array( 0, 0, 3, 0, 3, 3, 0, 3 )

[node name="SuperPoint" type="Polygon2D" parent="."]
position = Vector2( 49.3414, 220.772 )
color = Color( 1, 0, 0, 1 )
polygon = PackedVector2Array( 0, 0, 3, 0, 3, 3, 0, 3 )
